<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="isle_n_liga">Isleýän ligaň:</string>
    <string name="erkekler">Erkekler</string>
    <string name="a_allar">Aýallar</string>
    <string name="bilelikde">Bilelikde</string>
    <string name="indiki">Indiki...</string>
    <string name="elden_gelen">ELDEN GELEN</string>
    <string name="m_mkin_ilikleri_gidirme">MÜMKINÇILIKLERI GIDIRME!</string>
    <string name="heri_izde_topar_tapy_we_liga_yzda_agdaklyk_edi">Şäheriňizde topar tapyň we ligaňyzda agdaklyk ediň.</string>
    <string name="ba_la">Başla!</string>
    <string name="seni_derej">Seniň derejäň?</string>
    <string name="wreniji">Öwreniji</string>
    <string name="k_pi_g_ren">Köpi gören</string>
    <string name="g_zle">Gözle</string>
</resources>